--- a/index.html
+++ b/index.html
@@ -4,19 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href=estilos/style.css">
+    <link rel="stylesheet" href=estilos/style.css>
 </head>
 <body>
     <main>
         <section id="login">
             <div id="imagem">
-                Foto
+
             </div>
             <div id="formulario">
                 <h1>Login</h1>
                 <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta
-                    e fazer as configurações no seu ambiente.</p>
-                <form action="login.php" method="post"></form>
+                e fazer as configurações no seu ambiente</p>
+                <form action="login.php" method="post">
+
+                </form>
             </div>
         </section>
     </main>
