--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     </div>
 
                     <input type="submit" value="Entrar">
-                    <a href="Esqueci.html">
+                    <a href="Esqueci.html" class="botao">
                         Esqueci a senha <i class="material-symbols-outlined">mail</i>
                     </a>
                 </form>
